# DAssetEditor

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  glinfo.txt
.cache/replit/: __replit_disk_meta.json
src/: Main.cpp
src/GL/: Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
stage/Shaders/: debugF.glsl  debugV.glsl
